syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: default
spec:
  selector:
    app: syncthing
  ports:
  - name: web-ui
    port: 8384
    targetPort: 8384
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync-tcp
  namespace: default
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
  - name: sync-tcp
    port: 22000
    targetPort: 22000
    nodePort: 32200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync-udp
  namespace: default
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
  - name: sync-udp
    port: 22000
    targetPort: 22000
    nodePort: 32200
    protocol: UDP
