syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: syncthing.k8s.ecafe.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: syncthing
            port:
              number: 8384
